--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="question9_choice1">Stalactites</string>
     <string name="question9_choice2">Stalagmites</string>
 
-    <string name="question10">10. What process involves heating an ore to obtain a metal?</string>
+    <string name="question10">10. What process involves heating an ore to obtain a non metal?</string>
 
     <string name="submit_answers">Submit Answers</string>
 
